--- a/coffee/src/main/resources/templates/xdm/infra/CodeGroupXdmList.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeGroupXdmList.html
@@ -29,7 +29,7 @@
     		<td th:text="${list.seq}"></td>
        		<td th:text="${list.name}"></td>
        		<td th:text="${list.xseqCount}"></td>
-       		<td><a th:href="@{/codeGroupView(seq=${list.seq}, name=${list.name}, delNy=${list.delNy})}" th:text="${list.name}"></a></td>
+       		<td><a th:href="@{/(seq=${list.seq}, name=${list.name}, delNy=${list.delNy})}" th:text="${list.name}"></a></td>
        		
      		<td th:text="${#dates.format(list.modDatetime, 'yyyy-MM-dd HH:mm:ss')}"></td>
     	</tr>
