--- a/coffee/src/main/resources/templates/xdm/infra/Form2.html
+++ b/coffee/src/main/resources/templates/xdm/infra/Form2.html
@@ -42,14 +42,14 @@
 	<!-- Scrollbar CSS -->
 	<link rel="stylesheet" href="/xdm/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
 
+	<!-- Date Range CSS -->
+	<link rel="stylesheet" href="/xdm/assets/vendor/daterange/daterange.css">
+
+	<!-- Uploader CSS -->
+	<link rel="stylesheet" href="/xdm/assets/vendor/dropzone/dropzone.min.css" />
+
 	<!-- Bootstrap Select CSS -->
 	<link rel="stylesheet" href="/xdm/assets/vendor/bs-select/bs-select.css" />
-
-	<!-- Datetime picker JS -->
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" media="screen"href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
-
 
 </head>
 
@@ -102,7 +102,7 @@
 								</ul>
 							</div>
 						</li>
-						<li class="sidebar-dropdown active">
+						<li class="sidebar-dropdown">
 							<a href="#">
 								<i class="bi bi-handbag"></i>
 								<span class="menu-text">Product</span>
@@ -110,7 +110,7 @@
 							<div class="sidebar-submenu">
 								<ul>
 									<li>
-										<a href="orders.html" class="current-page">Order History</a>
+										<a href="orders.html">Order History</a>
 									</li>
 									<li>
 										<a href="products.html">Products</a>
@@ -204,7 +204,7 @@
 								</ul>
 							</div>
 						</li>
-						<li class="sidebar-dropdown">
+						<li class="sidebar-dropdown active">
 							<a href="#">
 								<i class="bi bi-stickies"></i>
 								<span class="menu-text">Pages</span>
@@ -233,7 +233,7 @@
 										<a href="profile.html">Profile</a>
 									</li>
 									<li>
-										<a href="account-settings.html">Account Settings</a>
+										<a href="account-settings.html" class="current-page">Account Settings</a>
 									</li>
 								</ul>
 							</div>
@@ -433,8 +433,8 @@
 						<i class="bi bi-house"></i>
 						<a href="index.html">Home</a>
 					</li>
-					<li class="breadcrumb-item">Product</li>
-					<li class="breadcrumb-item breadcrumb-active" aria-current="page">Orders</li>
+					<li class="breadcrumb-item">Pages</li>
+					<li class="breadcrumb-item breadcrumb-active" aria-current="page">Account Settings</li>
 				</ol>
 				<!-- Breadcrumb end -->
 
@@ -522,199 +522,114 @@
 			<div class="content-wrapper-scroll">
 
 				<!-- Content wrapper start -->
-				<!-- <div class="content-wrapper"> -->
-
-				<!-- Row start -->
-				<!-- 폼 셀렉트 -->
-			<form name="formList" id="formList" method="post" autocomplete="off">
-				<div class="row">
-
+				<div class="content-wrapper">
+					<!-- Card start -->
 					<div class="card">
-						<div class="card-header row">
+						<div class="card-body">
 
-							<div class="col mb-3">
-								<div class="card-title">Order History</div>
-							</div>
-
-
-							<!-- search s -->
-									
-										<div class="row col-12 gy-3 mb-3">
-											<div class="col-3">
-												<label class="form-label d-flex">삭제여부</label>
-												<select id="shDelNy" name="shDelNy" class="form-select form-select-sm">
-													<option value="" th:selected="${vo.shDelNy == null}">삭제여부</option>
-													<option value="1" th:selected="${vo.shDelNy == 1}">Y</option>
-													<option value="0" th:selected="${vo.shDelNy == 0}">N</option>            
-												</select>
-											</div>
-											
-											<div class="col-3">
-												<label class="form-label d-flex">등록일/수정일</label>
-												<select id="shOptionDate" name="shOptionDate" class="form-select form-select-sm">
-													<option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
-													<option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
-													<option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>
-												</select>
-											</div>
-											
-											<div class="col-3">
-												<label class="form-label d-flex">시작일</label>
-													<input type="text" id="shDateStart" name="shDateStart" th:value="${#strings.substring(vo.shDateStart, 0, 10)}" placeholder="시작일" 
-													class="form-control form-control-sm" autocomplete="off">
-											</div>
-											
-											<div class="col-3">
-												<label class="form-label d-flex">종료일</label>
-													<input type="text" id="shDateEnd" name="shDateEnd" th:value="${#strings.substring(vo.shDateEnd, 0, 10)}" placeholder="종료일" 
-													class="form-control form-control-sm" autocomplete="off">
-											</div>
-											<div class="col-3">
-												<select id="shOption" name="shOption" class="form-select form-select-sm">
-													<option value="" th:selected="${vo.shOption == null}">검색구분</option>
-													<option value="1" th:selected="${vo.shOption == 1}">코드그룹 코드</option>
-													<option value="2" th:selected="${vo.shOption == 2}">코드그룹 이름</option>
-													<option value="3" th:selected="${vo.shOption == 3}">코드그룹 이름 (영문)</option>
-												</select>
-											</div>  
-											<div class="col-3">
-												<input type="text" id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" class="form-control form-control-sm">
-												<div class="invalid-feedback" id="shValueFeedback"></div>
-											</div>
-											<div class="col">
-												<button type="button" id="btnSearch" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
-												<button type="button" id="btnReset" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-rotate-right fa-lg"></i></button>
-											</div>                     
+							<!-- 컨테이너 시작 -->
+							<form method="post" action="codeGroupInsert">
+								<div class="container-fluid">
+									<div class="row">
+										<div class="col mb-3">
+											<div class="card-title">코드그룹 관리</div>
 										</div>
-<!-- search e -->
-						</div>
-					</div>
-				</div>
-			</form>
-				<!-- Row end -->
-				<!-- 테이블 시작-->
-				<!-- 테이블 컨테이너 시작-->
-				<div class="container-fluid">
-					<div class="card-body ">
-						<!-- 페이지 셀렉트 -->
-						<div class="row  justify-content-end">
-							<div class="col mb-1 mt-2">
-								<label class="form-label">Total : 7</label>
-							</div>
-							<div class="col-2 mb-1 mt-2 justify-content-end">
-								<label class="form-label">Page</label>
-								<select class="form-select-sm">
-									<option>5</option>
-									<option>10</option>
-									<option>15</option>
-									<option>20</option>
-									<option>25</option>
-								</select>
-							</div>
 
-						</div>
-						<div class="table-responsive">
-							<table class="table v-middle">
-								<div class="row">
-									<div class="col">
-										<thead>
-											<tr>
-												<td>
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckChecked" checked>
-													<label class="form-check-label" for="flexCheckChecked"></label>
-												</td>
-												<td>#</td>
-												<th>삭제여부</th>
-												<th>이름</th>
-												<th>메모</th>
-												<th>등록일</th>
-												<th>수정일</th>
-											</tr>
-										</thead>
+									</div>
+									<div class="row mt-4">
+										<div class="col-6">
+											<label for="validationCustom01" class="form-label">이름</label>
+											<input type="text" id="name" name="name" class="form-control">
+											<div class="invalid-feedback">
+										  			이름을 입력하세요
+										  	</div>
+										</div>
+										<div class="col-6">
+											<label for="validationCustom01" class="form-label">메모</label>
+											<input type="text" id="memo" name="memo" class="form-control">
+										</div>
+										<div class="col-6">
+											<label for="validationCustom01" class="form-label">메d</label>
+											<input type="text" id="delNy" name="delNy" class="form-control">
+										</div>
+									</div>
+									<div class="d-flex justify-content-between mt-4">
+										<div class="">
+											<button type="submit" class="btn btn-info">back</button>
+										</div>
+										<div class="">
+											<button type="submit" id="btnSubmit" class="btn btn-info">save</button>
+										</div>
 									</div>
 								</div>
-								<tr th:if="${!#lists.isEmpty(list)}" th:each="list:${list}">
-									<td>
-										<input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"
-											checked>
-										<label class="form-check-label" for="flexCheckChecked"></label>
-									</td>
-									<!-- seq number -->
-									<td th:text="${list.seq}"></td>
-									<td th:if="${list.delNy eq 0}">N</td>
-									<td th:unless="${list.delNy eq 0}">Y</td>
-									<td><a th:href="@{/Form3(name=${list.name}, memo=${list.memo}, seq=${list.seq})}"
-											th:text="${list.name}"></a></td>
-									<td th:text="${list.memo}"></td>
-									<!-- 등록일 수정일 -->
-									<td th:text="${#dates.format(list.regDatetime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td th:text="${#dates.format(list.modDatetime, 'yyyy-MM-dd HH:mm:ss')}"></td>
 
-								</tr>
+							</form>
+								</div>
+							<!-- 컨테이너 끝 -->
+							<script>
+								(function () {
+									'use strict'
 
-							</table>
+									// Fetch all the forms we want to apply custom Bootstrap validation styles to
+									var forms = document.querySelectorAll('.needs-validation')
+
+									// Loop over them and prevent submission
+									Array.prototype.slice.call(forms)
+										.forEach(function (form) {
+											form.addEventListener('submit', function (event) {
+												if (!form.checkValidity()) {
+													event.preventDefault()
+													event.stopPropagation()
+												}
+
+												form.classList.add('was-validated')
+											}, false)
+										})
+								})()
+							
+										//자바스크립트 버튼
+	document.getElementById("btnSubmit").onclick = function() {
+	
+	if(validationInst() == false)return false;
+	}
+	
+	function validationInst() {
+		if(validationUpdt() == false) {
+			return false;
+			} else {
+				form.action = goUrlXdmList;
+				form.submit();
+			}
+	}
+	
+	//function validationUpdt() {
+	//	alert("name: " + document.getElementById("name").value)
+	//}					
+	
+	function validationUpdt(){
+		if(!nullToEmpty(document.getElementById("name").value)) {
+			
+			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+	}
+	nullToEmpty = function(value){
+		if(value == null || value == 'null' || value.length == 0){
+			return false;
+		} else{
+			return true;
+		}
+	}
+							</script>
 						</div>
-
-
-
-						<!-- </div> -->
-						<!-- Content wrapper end -->
-
-						<!-- App Footer start -->
-						<!-- 페이지네이션 -->
-
-						<ul class="pagination justify-content-center mt-5 mb-4">
-							<li class="paginate_button page-item previous" id="basicExample_previous">
-								<a href="#" aria-controls="basicExample" data-dt-idx="0" tabindex="0"
-									class="page-link">Previous</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="1" tabindex="0"
-									class="page-link">1</a>
-							</li>
-							<li class="paginate_button page-item disabled" id="basicExample_ellipsis">
-								<a href="#" aria-controls="basicExample" data-dt-idx="2" tabindex="0"
-									class="page-link">…</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="3" tabindex="0"
-									class="page-link">8</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="4" tabindex="0"
-									class="page-link">9</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="5" tabindex="0"
-									class="page-link">10</a>
-							</li>
-							<li class="paginate_button page-item next disabled" id="basicExample_next">
-								<a href="#" aria-controls="basicExample" data-dt-idx="8" tabindex="0"
-									class="page-link">Next</a>
-							</li>
-						</ul>
-
-						<div class="row col" style="font-size: larger;">
-							<div class="col-10 mx-5 mt-2 mb-2 float-right">
-								<button type="button" class="btn btn-info" data-bs-toggle="modal"
-									data-bs-target="#verticallyCentered">
-									<i class="bi bi-trash text-red"></i>
-								</button>
-							</div>
-							<div class="col-1 mt-2 mb-2 float-right">
-								<a th:href="@{/Form2}"><button type="submit" class="btn btn-info"  data-bs-toggle="modal"
-										data-bs-target="#verticallyCentered-mod">
-										+
-									</button></a>
-							</div>
-						</div>
-
-
 					</div>
-				</div>
-				<!-- 테이블 컨테이너 끝-->
+					<!-- Card end -->
 
+				</div>
+				<!-- Content wrapper end -->
+
+				<!-- App Footer start -->
 				<div class="app-footer">
 					<span>© Bootstrap Gallery 2023</span>
 				</div>
@@ -730,29 +645,6 @@
 
 	</div>
 	<!-- Page wrapper end -->
-
-	<!-- 삭제 모달-->
-	<div class="modal fade" id="verticallyCentered" 
-			tabindex="-1" aria-labelledby="verticallyCenteredLabel"
-		aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="verticallyCenteredLabel">경고!</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					삭제 하시겠습니까?
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-dark" data-bs-dismiss="modal">Delete</button>
-					<button type="button" class="btn btn-success" data-bs-dismiss="modal">close</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-
 
 	<!-- *************
 			************ Required JavaScript Files *************
@@ -771,72 +663,19 @@
 	<script src="/xdm/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
 	<script src="/xdm/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
 
-	<!-- Bootstrap Select JS -->
-	<script src="/xdm/assets/vendor/bs-select/bs-select.min.js"></script>
-	<script src="/xdm/assets/vendor/bs-select/bs-select-custom.js"></script>
+	<!-- Date Range JS -->
+	<script src="/xdm/assets/vendor/daterange/daterange.js"></script>
+	<script src="/xdm/assets/vendor/daterange/custom-daterange.js"></script>
+
+	<!-- Dropzone JS -->
+	<script src="/xdm/assets/vendor/dropzone/dropzone.min.js"></script>
 
 	<!-- Main Js Required -->
 	<script src="/xdm/assets/js/main.js"></script>
 
-
-	 
-	
-
-<!-- go스크립트 -->
-<<!-- 강사님 데이터 피커 -->
-	<!--데이터피커 자바스크립트 구문-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
-        <script type="text/javascript">
-            $(function () {
-                $("#shDateStart, #shDateEnd").datetimepicker({
-                    format: "Y-m-d",
-                    timepicker:false,
-                });
-            });
-   
-	
-	let goUrlXdmList = "/productTableList";								/* ### */
-	let goUrlXdmForm = "/Form2";								/* ### */
-	let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
-	let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
-	let goUrlXdmView = "/Form3";								/* ### */
-	
-	let seq = document.querySelector("input[name=ifcgSeq]");									/* ### */
-	
-	let form = document.querySelector("form[name=formList]");
-
-	document.getElementById("btnReset").onclick = function () {
-	    location.href = goUrlXdmList;
-	}
-	
-	
-	/*
-	document.getElementById("btnForm").onclick = function () {
-	    goForm(0);
-	}
-	*/
-	
-	goForm = function (keyValue) {
-	    seq.value = keyValue;
-	    form.action = goUrlXdmForm;
-	    form.submit();
-	}
-	
-	document.getElementById("btnSearch").onclick = function () {
-    form.action = goUrlXdmList;
-    form.submit();
-	};
-
-	function enterkey() {
-		if (window.event.keyCode == 13) {
-		    form.action = goUrlXdmList;
-		    form.submit();
-	    }
-	}
-	
-	
-</script>
-
+	<!-- Bootstrap Select JS -->
+	<script src="/xdm/assets/vendor/bs-select/bs-select.min.js"></script>
+	<script src="/xdm/assets/vendor/bs-select/bs-select-custom.js"></script>
 </body>
 
 </html>
