--- a/coffee/src/main/resources/templates/xdm/infra/productTableList2.html
+++ b/coffee/src/main/resources/templates/xdm/infra/productTableList2.html
@@ -537,74 +537,55 @@
 										
 										<div class="row col-12">
 											<div class="col-3">
-												<label class="form-label d-flex">카테고리</label>
-												<select class="form-select">
-													<option>니트</option>
-													<option>셔츠</option>
-													<option>상의</option>
-													<option>하의</option>
-													<option>아우터</option>
-													<option>신발</option>
-													<option>액세서리</option>
+												<label class="form-label d-flex">삭제여부</label>
+												<select id="shDelNy" name="shDelNy" class="form-select form-select-sm">
+													<option value="" th:selected="${vo.shDelNy == null}">삭제여부</option>
+													<option value="1" th:selected="${vo.shDelNy == 1}">Y</option>
+													<option value="0" th:selected="${vo.shDelNy == 0}">N</option>            
 												</select>
 											</div>
 											
 											<div class="col-3">
 												<label class="form-label d-flex">성별</label>
-												<select class="form-select">
-													<option>남</option>
-														<option>여</option>
-														<option>남/여 공용</option>
+												<select id="shOptionDate" name="shOptionDate" class="form-select form-select-sm">
+													<option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
+													<option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
+													<option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>
 												</select>
 											</div>
 											
 											<div class="col-3">
-												<label class="form-label d-flex">사용 계절</label>
+												<label class="form-label d-flex">시작일</label>
 												<select class="form-select">
-													<option>봄</option>
-													<option>여름</option>
-													<option>가을</option>
-													<option>겨울</option>
-													<option>사계절</option>
+													<input type="text" id="shDateStart" name="shDateStart" th:value="${#strings.substring(vo.shDateStart, 0, 10)}" placeholder="시작일" 
+													class="form-control form-control-sm" autocomplete="off">
 												</select>
 											</div>
 											
 											<div class="col-3">
-												<label class="form-label d-flex">안감</label>
+												<label class="form-label d-flex">종료일</label>
 												<select class="form-select">
-													<option>기모</option>
-													<option>쭈리</option>
-													<option>기본</option>
-													<option>면</option>
+													<input type="text" id="shDateEnd" name="shDateEnd" th:value="${#strings.substring(vo.shDateEnd, 0, 10)}" placeholder="종료일" 
+													class="form-control form-control-sm" autocomplete="off">
 												</select>
 											</div>
+											<div class="col">
+												<select id="shOption" name="shOption" class="form-select form-select-sm">
+													<option value="" th:selected="${vo.shOption == null}">검색구분</option>
+													<option value="1" th:selected="${vo.shOption == 1}">코드그룹 코드</option>
+													<option value="2" th:selected="${vo.shOption == 2}">코드그룹 이름</option>
+													<option value="3" th:selected="${vo.shOption == 3}">코드그룹 이름 (영문)</option>
+												</select>
+											</div>  
+											<div class="col">
+												<input type="text" id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" class="form-control form-control-sm">
+												<div class="invalid-feedback" id="shValueFeedback"></div>
+											</div>
+											<div class="col">
+												<button type="button" id="btnSearch" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+												<button type="button" id="btnReset" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-rotate-right fa-lg"></i></button>
+											</div>                     
 										</div>
-										
-										<!--<div class="row mb-4">
-											<div class="col-3 gy-2">
-												<label class="form-label d-flex">등록일</label>
-												<div class="datetimepicker">
-													<input type="text" id="shDateStart" name="shDateStart" placeholder="시작일" 
-													class="form-control form-control-sm " autocomplete="off" readonly class="bi bi-calendar4">
-												</div>
-											</div>
-											<div class="col-3 gy-2">
-												<label class="form-label d-flex">수정일</label>
-												<div class="datetimepicker">
-													<input type="text" id="shDateStart" name="shDateStart" placeholder="종료일" 
-													class="form-control form-control-sm" autocomplete="off" readonly>
-												</div>
-											</div>
-											<div class="col-3 gy-2">
-												<label class="form-label d-flex"><br></label>
-												<div class="input-group">
-													<input type="text" class="form-control" placeholder="검색어..">
-													<button class="btn" type="button">
-														<i class="bi bi-search"></i>
-													</button>
-												</div>
-											</div>
-										</div>-->
 									</div>
 								</div>
 						</div>
