--- a/coffee/src/main/resources/templates/xdm/infra/CodeGroupReg.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeGroupReg.html
@@ -548,21 +548,27 @@
 											<label for="validationCustom01" class="form-label">메모</label>
 											<input type="text" id="memo" name="memo" class="form-control">
 										</div>
+									</div>
+									<div class="row mt-4">
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">메d</label>
+											<label for="validationCustom01" class="form-label">삭제여부</label>
 											<input type="text" id="delNy" name="delNy" class="form-control">
 										</div>
+										<div class="col-6">
+											<label for="validationCustom01" class="form-label">등록일</label>
+											<input type="text" name="regDatetime" class="form-control" >
+										</div>
 									</div>
+									
 									<div class="d-flex justify-content-between mt-4">
 										<div class="">
-											<button type="submit" class="btn btn-info">back</button>
+											<button type="submit" class="btn btn-info" onclick="javascript: form.action='CodeGroupXdmList';">back</button>       <!--질문 위에 인서트가 있는데 온클릭을 했을때 되는 이-->
 										</div>
 										<div class="">
 											<button type="submit" id="btnSubmit" class="btn btn-info">save</button>
 										</div>
 									</div>
 								</div>
-
 							</form>
 								</div>
 							<!-- 컨테이너 끝 -->
