--- a/coffee/src/main/resources/templates/xdm/infra/CodeGroupFrom.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeGroupFrom.html
@@ -540,20 +540,32 @@
 														<input type="text" name="seq" class="form-control" th:value="${item.seq}">
 													</div>
 													<div class="col-6">
-														<label class="form-label">name</label>
+														<label class="form-label">이름</label>
 														<input type="text" name="name" class="form-control" th:value="${item.name}">
 													</div>
 											</div>
 											<div class="row mt-3">
 													<div class="col-6">
-														<label class="form-label">memo</label>
+														<label class="form-label">메모</label>
 														<input type="text" name="memo" class="form-control" th:value="${item.memo}">
 													</div>
+													<div class="col-6">
+														<label class="form-label">수정일</label>
+														<input type="text" name="modDatetime" class="form-control" th:value="${#dates.format(item.modDatetime, 'yyyy-MM-dd')}">
+													</div>
+													
+											</div>
+											<div class="row mt-3">
+													<div class="col-6">
+														<label class="form-label">삭제여부</label>
+														<input type="text" name="delNy" class="form-control" th:value="${item.delNy}">
+													</div>
+													
 											</div>
 										<form method="post">
 											<div class="d-flex justify-content-between mt-4">
 												<div class="">
-													<button type="submit" class="btn btn-info" formaction="/productTableList">Back</button>
+													<button type="submit" class="btn btn-info" formaction="/CodeGroupXdmList">Back</button>
 												</div>
 												<div class="">
 													<button type="submit" class="btn btn-info" formaction="/codeGroupUelete">Uelete</button>
