--- a/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
@@ -528,116 +528,124 @@
 						<div class="card-body">
 
 							<!-- 컨테이너 시작 -->
-							<form method="post" action="CodeInsert">
-								<div class="container-fluid">
-									<div class="row">
-										<div class="col mb-3">
-											<div class="card-title">코드 관리</div>
-										</div>
-
-									</div>
-									<div class="row mt-4">
-										<div class="col-6">
-											<label for="validationCustom01" class="form-label">이름</label>
-											<input type="text" name="name" class="form-control">
-										</div>
-										<div class="col-6">
-											<label for="validationCustom01" class="form-label">메모</label>
-											<input type="text" name="memo" class="form-control">
-										</div>
-										<div class="col-6">
-											<label for="validationCustom01" class="form-label">메d</label>
-											<input type="text" name="delNy" class="form-control">
-										</div>
-									</div>
-									<div class="d-flex justify-content-between mt-4">
-										<div class="">
-											<button type="submit" class="btn btn-info">back</button>
-										</div>
-										<div class="">
-											<button type="submit" class="btn btn-info">save</button>
-										</div>
+							<form method="post">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col mb-3">
+										<div class="card-title">코드 관리</div>
 									</div>
 								</div>
-
-							</form>
+											<div class="row">
+													<div class="col-6">
+														<label class="form-label">seq</label>
+														<input type="text" name="seq" class="form-control" th:value="${item.seq}">
+													</div>
+													<div class="col-6">
+														<label class="form-label">코드그룹 시퀀스</label>
+														<input type="text" name="codeGroup_seq" class="form-control" th:value="${item.codeGroup_seq}">
+													</div>
+											</div>
+											<div class="row mt-3">
+													<div class="col-6">
+														<label class="form-label">이름</label>
+														<input type="text" name="name" class="form-control" th:value="${item.name}">
+													</div>
+													<div class="col-6">
+														<label class="form-label">메모</label>
+														<input type="text" name="memo" class="form-control" th:value="${item.memo}">
+													</div>
+											</div>
+											
+										
+											<div class="d-flex justify-content-between mt-4">
+												<div class="">
+													<button type="submit" class="btn btn-info" formaction="/CodeXdmList">Back</button>
+												</div>
+												<div class="">
+													<button type="submit" class="btn btn-info" formaction="/CodeUelete">Uelete</button>
+													<button type="submit" class="btn btn-info" formaction="/CodeUpdate">수정</button>
+													<button type="submit" id="delete" class="btn btn-info" formaction="/CodeDelete">삭제</button>
+												</div>
+											</div>
+										
 								</div>
-							<!-- 컨테이너 끝 -->
-							<script>
-								(function () {
-									'use strict'
+								</form>
+								<!-- 컨테이너 끝 -->
+								<script>
+									(function () {
+										'use strict'
 
-									// Fetch all the forms we want to apply custom Bootstrap validation styles to
-									var forms = document.querySelectorAll('.needs-validation')
+										// Fetch all the forms we want to apply custom Bootstrap validation styles to
+										var forms = document.querySelectorAll('.needs-validation')
 
-									// Loop over them and prevent submission
-									Array.prototype.slice.call(forms)
-										.forEach(function (form) {
-											form.addEventListener('submit', function (event) {
-												if (!form.checkValidity()) {
-													event.preventDefault()
-													event.stopPropagation()
-												}
+										// Loop over them and prevent submission
+										Array.prototype.slice.call(forms)
+											.forEach(function (form) {
+												form.addEventListener('submit', function (event) {
+													if (!form.checkValidity()) {
+														event.preventDefault()
+														event.stopPropagation()
+													}
 
-												form.classList.add('was-validated')
-											}, false)
-										})
-								})()
-							</script>
+													form.classList.add('was-validated')
+												}, false)
+											})
+									})()
+								</script>
+							</div>
 						</div>
+						<!-- Card end -->
+
 					</div>
-					<!-- Card end -->
+					<!-- Content wrapper end -->
+
+					<!-- App Footer start -->
+					<div class="app-footer">
+						<span>© Bootstrap Gallery 2023</span>
+					</div>
+					<!-- App footer end -->
 
 				</div>
-				<!-- Content wrapper end -->
-
-				<!-- App Footer start -->
-				<div class="app-footer">
-					<span>© Bootstrap Gallery 2023</span>
-				</div>
-				<!-- App footer end -->
+				<!-- Content wrapper scroll end -->
 
 			</div>
-			<!-- Content wrapper scroll end -->
-
-		</div>
-		<!-- *************
+			<!-- *************
 				************ Main container end *************
 			************* -->
 
-	</div>
-	<!-- Page wrapper end -->
+		</div>
+		<!-- Page wrapper end -->
 
-	<!-- *************
+		<!-- *************
 			************ Required JavaScript Files *************
 		************* -->
-	<!-- Required jQuery first, then Bootstrap Bundle JS -->
-	<script src="/xdm/assets/js/jquery.min.js"></script>
-	<script src="/xdm/assets/js/bootstrap.bundle.min.js"></script>
-	<script src="/xdm/assets/js/modernizr.js"></script>
-	<script src="/xdm/assets/js/moment.js"></script>
+		<!-- Required jQuery first, then Bootstrap Bundle JS -->
+		<script src="/xdm/assets/js/jquery.min.js"></script>
+		<script src="/xdm/assets/js/bootstrap.bundle.min.js"></script>
+		<script src="/xdm/assets/js/modernizr.js"></script>
+		<script src="/xdm/assets/js/moment.js"></script>
 
-	<!-- *************
+		<!-- *************
 			************ Vendor Js Files *************
 		************* -->
 
-	<!-- Overlay Scroll JS -->
-	<script src="/xdm/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-	<script src="/xdm/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
+		<!-- Overlay Scroll JS -->
+		<script src="/xdm/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
+		<script src="/xdm/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
 
-	<!-- Date Range JS -->
-	<script src="/xdm/assets/vendor/daterange/daterange.js"></script>
-	<script src="/xdm/assets/vendor/daterange/custom-daterange.js"></script>
+		<!-- Date Range JS -->
+		<script src="/xdm/assets/vendor/daterange/daterange.js"></script>
+		<script src="/xdm/assets/vendor/daterange/custom-daterange.js"></script>
 
-	<!-- Dropzone JS -->
-	<script src="/xdm/assets/vendor/dropzone/dropzone.min.js"></script>
+		<!-- Dropzone JS -->
+		<script src="/xdm/assets/vendor/dropzone/dropzone.min.js"></script>
 
-	<!-- Main Js Required -->
-	<script src="/xdm/assets/js/main.js"></script>
+		<!-- Main Js Required -->
+		<script src="/xdm/assets/js/main.js"></script>
 
-	<!-- Bootstrap Select JS -->
-	<script src="/xdm/assets/vendor/bs-select/bs-select.min.js"></script>
-	<script src="/xdm/assets/vendor/bs-select/bs-select-custom.js"></script>
+		<!-- Bootstrap Select JS -->
+		<script src="/xdm/assets/vendor/bs-select/bs-select.min.js"></script>
+		<script src="/xdm/assets/vendor/bs-select/bs-select-custom.js"></script>
 </body>
 
 </html>
